Changelog
=========

2022-03-16
- Fix "name" notice in mob search field
- Fix redirect behavior when one crafting or creature item is found

2022-03-14
- Add new crafting page!
- Updated ace_world to v0.9.246

2021-03-20
- Add Creature XP

2021-03-03
 - Updated physical armor table with effective damage reduction
 - Updated formula to include actual ArmorMod equation from ACE
 - Added average damage reduction

2021-03-02
 - Added special properties like IgnoreShield/IgnoreMagicResist/IgnoreMagicArmor

2021-02-24
 - Added effective drain resistances

2021-02-11
 - Added cow weenie types to lookup
 - Added more skill formulas
 - Look and feel improvements for mobile
 
2021-02-09
 - Added wielded treasure items
 - Added body part damage
 - Added spell book
 
2021-02-04
 - Add color coding to Effective AL table
 - Add magic resistances table
 - Redirect to mob page from lookup page if there is single result
 
2021-01-24
 - Initial release